codejudge-compiler/src/stage/11/err.txt
test.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error
